; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_poll.c_select_event_callback.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_poll.c_select_event_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.poll_fd_info = type { i32 }
%struct.select_context = type { i32, i32, i32 }

@SELECT_READ = common dso_local global i32 0, align 4
@SELECT_WRITE = common dso_local global i32 0, align 4
@SELECT_EX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32)* @select_event_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @select_event_callback(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %union.poll_fd_info, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.select_context*, align 8
  %9 = getelementptr inbounds %union.poll_fd_info, %union.poll_fd_info* %5, i32 0, i32 0
  store i32 %2, i32* %9, align 4
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  %10 = load i8*, i8** %6, align 8
  %11 = bitcast i8* %10 to %struct.select_context*
  store %struct.select_context* %11, %struct.select_context** %8, align 8
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* @SELECT_READ, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %23

16:                                               ; preds = %3
  %17 = bitcast %union.poll_fd_info* %5 to i32*
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.select_context*, %struct.select_context** %8, align 8
  %20 = getelementptr inbounds %struct.select_context, %struct.select_context* %19, i32 0, i32 2
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @bit_set(i32 %18, i32 %21)
  br label %23

23:                                               ; preds = %16, %3
  %24 = load i32, i32* %7, align 4
  %25 = load i32, i32* @SELECT_WRITE, align 4
  %26 = and i32 %24, %25
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %35

28:                                               ; preds = %23
  %29 = bitcast %union.poll_fd_info* %5 to i32*
  %30 = load i32, i32* %29, align 4
  %31 = load %struct.select_context*, %struct.select_context** %8, align 8
  %32 = getelementptr inbounds %struct.select_context, %struct.select_context* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @bit_set(i32 %30, i32 %33)
  br label %35

35:                                               ; preds = %28, %23
  %36 = load i32, i32* %7, align 4
  %37 = load i32, i32* @SELECT_EX, align 4
  %38 = and i32 %36, %37
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %40, label %47

40:                                               ; preds = %35
  %41 = bitcast %union.poll_fd_info* %5 to i32*
  %42 = load i32, i32* %41, align 4
  %43 = load %struct.select_context*, %struct.select_context** %8, align 8
  %44 = getelementptr inbounds %struct.select_context, %struct.select_context* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 4
  %46 = call i32 @bit_set(i32 %42, i32 %45)
  br label %47

47:                                               ; preds = %40, %35
  %48 = load i32, i32* %7, align 4
  %49 = load i32, i32* @SELECT_READ, align 4
  %50 = load i32, i32* @SELECT_WRITE, align 4
  %51 = or i32 %49, %50
  %52 = load i32, i32* @SELECT_EX, align 4
  %53 = or i32 %51, %52
  %54 = and i32 %48, %53
  %55 = icmp ne i32 %54, 0
  br i1 %55, label %57, label %56

56:                                               ; preds = %47
  store i32 0, i32* %4, align 4
  br label %58

57:                                               ; preds = %47
  store i32 1, i32* %4, align 4
  br label %58

58:                                               ; preds = %57, %56
  %59 = load i32, i32* %4, align 4
  ret i32 %59
}

declare dso_local i32 @bit_set(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
